--- a/bin/requirements.txt
+++ b/bin/requirements.txt
@@ -8,6 +8,7 @@ requests==2.28.1
 pandas==1.5.1
 geopandas==0.12.0
 configparser==5.3.0
+paramiko==3.4.0
 shapely==1.8.5
 cmocean==2.0
 docxtpl==0.11.5
